--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <ul id="lista">
 
+    </ul>
 
-  <script src="js/script.js" charset="utf-8"></script>  
+  <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
